tests/func/parsing/error_reporting/custom_hints/unexpected_closing_parent_glr.err
1:5: syntax error: unexpected token )
    1 | 2 + 3) * 4
      |      ^^^ expected: * +
  hint: Unexpected closing parenthesis